# Simulation

./: .gitignore  .gitmodules  pyproject.toml
src/Simulation/ik_sim/: check_runs.py  create_urdf_v2.py  dataset_reader.py  get_pos_from_recording.py  ik_pyroki.py  open_recordings.py  plot_trans_results.py  pybullet_demo.py  pybullet_sim.py  run_recording.py  script_sim.py  script_sim_batch.py  ufactory_sim.py
